--- a/authentication/package.json
+++ b/authentication/package.json
@@ -12,6 +12,7 @@
     "@auth/core": "^0.34.1",
     "@auth/nextjs": "^0.0.0-380f8d56",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
